--- a/examples/resume.css
+++ b/examples/resume.css
@@ -1,31 +1,60 @@
-*{margin:0;padding:0;}
+*{
+  margin:0;
+  padding:0;
+}
+
 body {
-  font:13.34px "Helvetica Neue",serif;
+  font-family:"Helvetica Neue", sans-serif;
+  font-size:0.85em;
   font-weight:300;
   color:black;
   line-height:1.4em;
   background-color: #fff;
-  padding: 0.7em;
+}
 
-  @media print {
-    margin: 25mm 25mm 25mm 25mm;
+@media screen {
+  body {
+    padding:1em;
   }
 }
+
 p {
   margin:0.5em 0;
   line-height:1.5em;
 }
+
 table {
   font-size:inherit;
   font:100%;
   margin:1em;
 }
-table th{border-bottom:1px solid #bbb;padding:.2em 1em;}
-table td{border-bottom:1px solid #ddd;padding:.2em 1em;}
-input[type=text],input[type=password],input[type=image],textarea{font:99% helvetica,arial,freesans,sans-      serif;}
-select,option{padding:0 .25em;}
-optgroup{margin-top:.5em;}
-pre,code{font:12px Monaco,"Courier New","DejaVu Sans Mono","Bitstream Vera Sans Mono",monospace;}
+
+table th {
+  border-bottom:1px solid #bbb;
+  padding:.2em 1em;
+}
+
+table td{
+  border-bottom:1px solid #ddd;
+  padding:.2em 1em;
+}
+
+input[type=text], input[type=password], input[type=image], textarea {
+  font:99% helvetica,arial,freesans,sans-serif;
+}
+
+select, option {
+  padding:0 .25em;
+}
+
+optgroup {
+  margin-top:.5em;
+}
+
+pre, code {
+  font:12px Monaco,"Courier New","DejaVu Sans Mono","Bitstream Vera Sans Mono",monospace;
+}
+
 pre {
   margin:1em 0;
   font-size:12px;
@@ -39,12 +68,14 @@ pre {
   -webkit-border-radius:3px;
   -moz-border-radius:3px;border-radius:3px;
 }
+
 pre code {
   padding:0;
   font-size:12px;
   background-color:#eee;
   border:none;
 }
+
 code {
   font-size:12px;
   background-color:#f8f8ff;
@@ -52,42 +83,122 @@ code {
   padding:0 .2em;
   border:1px solid #dedede;
 }
-img{border:0;max-width:100%;}
-abbr{border-bottom:none;}
-a{color:inherit;text-decoration:none;}
-a:hover{text-decoration:underline;}
-a code,a:link code,a:visited code{color:#4183c4;}
-h2,h3{margin:1em 0;}
-em{font-style:normal;text-decoration:underline;}
-h1,h2,h3,h4,h5,h6{border:0;}
-h1{font-size:200%;border-top:4px solid #aaa;padding-top:.5em;margin-top:1.5em;}
-h1:first-child{margin-top:0;padding-top:.25em;border-top:none;text-align:center;}
-h1 + p {text-align:center;}
-h2{font-size:150%;margin-top:1.5em;border-top:4px solid #e0e0e0;padding-top:.5em;}
-h3{margin-top:1em;}
-hr{border:none;}
-ul{margin:0 0 1em 2em;}
-ol{margin:0 0 1em 2em;}
-ul li,ol li{margin-top:.5em;margin-bottom:.5em;}
-ul ul,ul ol,ol ol,ol ul{margin-top:0;margin-bottom:0;}
-blockquote{margin:1em 0;border-left:5px solid #ddd;padding-left:.6em;color:#555;}
-dt{font-weight:bold;margin-left:1em;}
-dd{margin-left:2em;margin-bottom:1em;}
-mark{background-color:transparent;text-align:center;display:block;}
-sup {
+
+img {
+  border:0;
+  max-width:100%;
+}
+
+abbr {
+  border-bottom:none;
+}
+
+a {
+  color:#4183c4;
+  text-decoration:none;
+}
+
+a:hover {
+  text-decoration:underline;
+}
+
+a code, a:link code ,a:visited code {
+  color:#4183c4;
+}
+
+em {
+  font-style:normal;
+  text-decoration:underline;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  border:0;
+}
+
+h1 {
+  font-size:200%;
+  margin:1.5em 0 0.5em 0;
+}
+
+h1:first-child {
+  margin-top:0;
+  text-align:center;
+}
+
+h1 + p {
+  text-align:center;
+}
+
+h2 {
+  font-size:150%;
+  margin:0.5em 0 0.5em 0;
+  padding-top:0.5em;
+  border-top:3px solid #f9f9f9;
+}
+
+hr {
+  border:3px dotted #eee;
+}
+
+ul {
+  margin:0 0 1em 2em
+}
+
+ol {
+  margin:0 0 1em 2em
+}
+
+ul li, ol li {
+  margin-top:.5em
+  margin-bottom:.5em
+}
+
+ul ul,ul ol,ol ol,ol ul {
+  margin-top:0
+  margin-bottom:0
+}
+
+blockquote {
+  margin:1em 0
+  border-left:5px solid #ddd
+  padding-left:.6em
+  color:#555
+}
+
+dt {
+  font-weight:bold
+  margin-left:1em
+}
+
+dd {
+  margin-left:2em
+  margin-bottom:1em
+}
+
+mark {
+  background-color:transparent
+  text-align:center
+  display:block
+}
+
+sup  {
+
     font-size: 0.83em;
     vertical-align: super;
     line-height: 0;
 }
+
 * {
   -webkit-print-color-adjust: exact;
 }
+
 @media screen and (min-width: 914px) {
     body {
         width: 854px;
         margin:0 auto;
     }
 }
+
 @media print {
   table, pre {
     page-break-inside: avoid;
