Support for YAML-encoded metadata per document

--- a/examples/document.haml
+++ b/examples/document.haml
@@ -8,7 +8,7 @@
     %meta{ charset: "utf-8" }
     %base{ href: base_url }
     %meta{ name: "print_media_type", content: "true"}
-    %meta{ name: "pdfkit-footer-left", content: "Company Name" }
+    %meta{ name: "pdfkit-footer-left", content: "Company Name - #{meta["Title"]}" }
     %meta{ name: "pdfkit-footer-right", content: "Page [page] of [topage]" }
     %meta{ name: "pdfkit-footer-spacing", content: "10" }
     %meta{ name: "pdfkit-page_size", content: "Letter" }
